Use plain string for resource.Quantity, to let the grpc-gateway use JSON Marshaler
