# generated/openapi/vivnfm/vi-vnfm.swagger.json
@@ -857,16 +857,22 @@
           "description": "Time this software image was last updated."
         },
         "minDisk": {
-          "$ref": "#/definitions/resourceQuantity",
-          "description": "Minimal disk size for this software image."
+          "type": "string",
+          "description": "Minimal disk size for this software image.",
+          "example": "10Gi",
+          "pattern": "^([+-]?[0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
         },
         "minRam": {
-          "$ref": "#/definitions/resourceQuantity",
-          "description": "Minimal RAM size for this software image."
+          "type": "string",
+          "description": "Minimal RAM size for this software image.",
+          "example": "512M",
+          "pattern": "^([+-]?[0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
         },
         "size": {
-          "$ref": "#/definitions/resourceQuantity",
-          "description": "Size of this software image."
+          "type": "string",
+          "description": "Size of this software image.",
+          "example": "5Gi",
+          "pattern": "^([+-]?[0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
         },
         "status": {
           "type": "string",
@@ -1155,8 +1161,10 @@
       "type": "object",
       "properties": {
         "virtualMemSize": {
-          "$ref": "#/definitions/resourceQuantity",
-          "description": "Amount of virtual Memory (e.g. in MB)."
+          "type": "string",
+          "description": "Amount of virtual Memory (e.g. in MB).",
+          "example": "2048M",
+          "pattern": "^([+-]?[0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
         },
         "virtualMemOversubscriptionPolicy": {
           "type": "string",
@@ -1206,7 +1214,7 @@
         },
         "networkType": {
           "$ref": "#/definitions/NetworkType",
-          "description": "Type of network that maps to the virtualised network. This list is extensible. Examples are:\n • \"local\";\n • \"vlan\";\n • \"vxlan\";\n • \"gre\";\n • \"l3-vpn\";\n • etc."
+          "description": "Type of network that maps to the virtualised network. This list is extensible. Examples are:\n \u2022 \"local\";\n \u2022 \"vlan\";\n \u2022 \"vxlan\";\n \u2022 \"gre\";\n \u2022 \"l3-vpn\";\n \u2022 etc."
         },
         "providerNetwork": {
           "type": "string",
@@ -1269,7 +1277,7 @@
         },
         "networkType": {
           "$ref": "#/definitions/NetworkType",
-          "description": "Type of network that maps to the virtualised network. This list is extensible. Examples are:\n • \"local\";\n • \"vlan\";\n • \"vxlan\";\n • \"gre\";\n • \"l3-vpn\";\n • etc.\n Cardinality can be \"0\" to cover the case where this attribute is not required to create the virtualised network."
+          "description": "Type of network that maps to the virtualised network. This list is extensible. Examples are:\n \u2022 \"local\";\n \u2022 \"vlan\";\n \u2022 \"vxlan\";\n \u2022 \"gre\";\n \u2022 \"l3-vpn\";\n \u2022 etc.\n Cardinality can be \"0\" to cover the case where this attribute is not required to create the virtualised network."
         },
         "providerNetwork": {
           "type": "string",
@@ -1473,8 +1481,10 @@
           "description": "Type of virtualised storage resource (e.g. volume, object)."
         },
         "sizeOfStorage": {
-          "$ref": "#/definitions/resourceQuantity",
-          "description": "Size of virtualised storage resource (e.g. size of volume, in GB)."
+          "type": "string",
+          "description": "Size of virtualised storage resource (e.g. size of volume, in GB).",
+          "example": "20Gi",
+          "pattern": "^([+-]?[0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
         },
         "rdmaEnabled": {
           "type": "boolean",
@@ -1871,15 +1881,6 @@
         }
       },
       "additionalProperties": {}
-    },
-    "resourceQuantity": {
-      "type": "object",
-      "properties": {
-        "string": {
-          "type": "string"
-        }
-      },
-      "description": "Quantity is a fixed-point representation of a number.\nIt provides convenient marshaling/unmarshaling in JSON and YAML,\nin addition to String() and AsInt64() accessors.\n\nThe serialization format is:\n\n```\n\u003cquantity\u003e        ::= \u003csignedNumber\u003e\u003csuffix\u003e\n\n\t(Note that \u003csuffix\u003e may be empty, from the \"\" case in \u003cdecimalSI\u003e.)\n\n\u003cdigit\u003e           ::= 0 | 1 | ... | 9\n\u003cdigits\u003e          ::= \u003cdigit\u003e | \u003cdigit\u003e\u003cdigits\u003e\n\u003cnumber\u003e          ::= \u003cdigits\u003e | \u003cdigits\u003e.\u003cdigits\u003e | \u003cdigits\u003e. | .\u003cdigits\u003e\n\u003csign\u003e            ::= \"+\" | \"-\"\n\u003csignedNumber\u003e    ::= \u003cnumber\u003e | \u003csign\u003e\u003cnumber\u003e\n\u003csuffix\u003e          ::= \u003cbinarySI\u003e | \u003cdecimalExponent\u003e | \u003cdecimalSI\u003e\n\u003cbinarySI\u003e        ::= Ki | Mi | Gi | Ti | Pi | Ei\n\n\t(International System of units; See: http://physics.nist.gov/cuu/Units/binary.html)\n\n\u003cdecimalSI\u003e       ::= m | \"\" | k | M | G | T | P | E\n\n\t(Note that 1024 = 1Ki but 1000 = 1k; I didn't choose the capitalization.)\n\n\u003cdecimalExponent\u003e ::= \"e\" \u003csignedNumber\u003e | \"E\" \u003csignedNumber\u003e\n```\n\nNo matter which of the three exponent forms is used, no quantity may represent\na number greater than 2^63-1 in magnitude, nor may it have more than 3 decimal\nplaces. Numbers larger or more precise will be capped or rounded up.\n(E.g.: 0.1m will rounded up to 1m.)\nThis may be extended in the future if we require larger or smaller quantities.\n\nWhen a Quantity is parsed from a string, it will remember the type of suffix\nit had, and will use the same type again when it is serialized.\n\nBefore serializing, Quantity will be put in \"canonical form\".\nThis means that Exponent/suffix will be adjusted up or down (with a\ncorresponding increase or decrease in Mantissa) such that:\n\n- No precision is lost\n- No fractional digits will be emitted\n- The exponent (or suffix) is as large as possible.\n\nThe sign will be omitted unless the number is negative.\n\nExamples:\n\n- 1.5 will be serialized as \"1500m\"\n- 1.5Gi will be serialized as \"1536Mi\"\n\nNote that the quantity will NEVER be internally represented by a\nfloating point number. That is the whole point of this exercise.\n\nNon-canonical values will still parse as long as they are well formed,\nbut will be re-emitted in their canonical form. (So always use canonical\nform, or don't diff.)\n\nThis format is intended to make it difficult to use these numbers without\nwriting some sort of special handling code in the hopes that that will\ncause implementors to also use a fixed point implementation.\n\n+protobuf=true\n+protobuf.embed=string\n+protobuf.options.marshal=false\n+protobuf.options.(gogoproto.goproto_stringer)=false\n+k8s:deepcopy-gen=true\n+k8s:openapi-gen=true"
     },
     "rpcStatus": {
       "type": "object",
